# irmin-socket

./: .gitignore  README.md  dune-project  irmin-socket.opam
example/markdown-editor/: README.md  build.sh
example/markdown-editor/client/: dune  index.ml
example/markdown-editor/markdown/: dune  markdown.ml  markdown.mli
example/markdown-editor/server/: dune  html.eml.ml  server.ml
lib/: dune  irmin_socket.ml  protocol.ml  protocol.mli
lib/brr/: dune  irmin_socket_brr.ml  irmin_socket_brr.mli
